# PostgreSQL-CLI

./: CMakeLists.txt  README.md  compile_commands.json
src/: main.cpp
src/cli/: cli_parser.cpp  cli_parser.hpp  formatter.cpp  formatter.hpp
src/core/: app_context.hpp  command_handler.cpp  command_handler.hpp
src/db/: db_exceptions.hpp  pg_connection.cpp  pg_connection.hpp  pg_query.cpp  pg_query.hpp
src/ui/: gui_app.cpp  gui_app.hpp
src/utils/: config.cpp  config.hpp  logger.cpp  logger.hpp
